# ChangeLog for net-irc/irssi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/irssi/ChangeLog,v 1.145 2009/06/07 17:02:02 nixnut Exp $

  07 Jun 2009; nixnut <nixnut@gentoo.org> irssi-0.8.13-r1.ebuild:
  ppc stable #271875

  02 Jun 2009; Jeroen Roovers <jer@gentoo.org> irssi-0.8.13-r1.ebuild:
  Stable for HPPA (bug #271875).

  01 Jun 2009; Raúl Porcel <armin76@gentoo.org> irssi-0.8.13-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #271875

  01 Jun 2009; Dawid Węgliński <cla@gentoo.org> irssi-0.8.13-r1.ebuild:
  Stable on amd64 (bug #271875)

  31 May 2009; Brent Baude <ranger@gentoo.org> irssi-0.8.13-r1.ebuild:
  Marking irssi-0.8.13-r1 ppc64 for bug 271875

*irssi-0.8.13-r1 (31 May 2009)

  31 May 2009; Sven Wegener <swegener@gentoo.org> +irssi-0.8.13-r1.ebuild,
  +files/irssi-0.8.13-svn-5068.patch:
  Security bump for wallop off-by-one heap access, bug #271875.

*irssi-0.8.13 (01 Apr 2009)

  01 Apr 2009; Sven Wegener <swegener@gentoo.org> -irssi-0.8.13_rc1.ebuild,
  +irssi-0.8.13.ebuild:
  Version bump.

  22 Mar 2009; Sven Wegener <swegener@gentoo.org> +irssi-0.8.13_rc1.ebuild:
  Version bump.

*irssi-0.8.13_rc1 (22 Mar 2009)

  22 Mar 2009; Sven Wegener <swegener@gentoo.org> +irssi-0.8.13_rc1.ebuild:
  Version bump.

  04 Sep 2008; Sven Wegener <swegener@gentoo.org>
  +files/irssi-0.8.12-svn-4612.patch, irssi-0.8.12.ebuild:
  Pull in a patch to fix the help URL, bug #235450.

  07 Jun 2008; Sven Wegener <swegener@gentoo.org>
  +files/irssi-0.8.12-svn-4640.patch, irssi-0.8.12.ebuild:
  Another patch to fix bug #202561.

  07 Jun 2008; Sven Wegener <swegener@gentoo.org>
  +files/irssi-0.8.12-svn-4637.patch, irssi-0.8.12.ebuild:
  Pull in a patch from upstream to fix bug #181528.

  17 May 2008; Sven Wegener <swegener@gentoo.org>
  +files/irssi-0.8.12-svn-4829.patch, irssi-0.8.12.ebuild: