@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX irssi-0.8.12-svn-4612.patch 1242 RMD160 55f2b106a86f82da1ef5ba4fccb2b06a4373aed9 SHA1 c0957897a3d6040d7792128507d2fd3199fc4821 SHA256 71afe4bc30635600c33f7c4e3565a85698d1aac0b506668a667e2ccad568841e
 AUX irssi-0.8.12-svn-4627.patch 701 RMD160 a38716dedeee45a3cec0d34834df60bbcb72e5c6 SHA1 83101715f3387ebcc2b35cff787b405c4c1a939f SHA256 ff869e600656e620b142142d295a32898d4349e32ff98ef8b04930e792242681
 AUX irssi-0.8.12-svn-4637.patch 747 RMD160 b645519cc7cde0668107f1f125054131db6de174 SHA1 0ae5f5e610ea78aacf46ac1c482b68d58827d8f1 SHA256 d2adcecf69f97a43e256752269e7c3696a5a74397b08fbbc871f5b0efbdbb4d7
@@ -6,8 +9,17 @@ AUX irssi-0.8.12-svn-4829.patch 924 RMD160 35a9e33ff801663911c9c9a36af836733333a
 AUX irssi-0.8.13-svn-5068.patch 642 RMD160 ddf56bcf33e86a8bf1b57b261ef3f95abff0aded SHA1 9d6b25e5c1784bff4e5b6bd6d2fd8cabf82c0fb3 SHA256 5a45946646b2bc67fa73967b765a522d756d08928c248f7eccc032c05e7db94e
 DIST irssi-0.8.12.tar.bz2 935918 RMD160 0588e6c2df0425c4f36bd84c1621d9ad170b6a81 SHA1 00ecca04766c51feef057b2327f67166be473fa3 SHA256 462d634bb509cc2bdd550ee5c7b269495f3173721b7404f162ad1f69b49bfff0
 DIST irssi-0.8.13.tar.bz2 946203 RMD160 d09b76fcb6cbdacea510cefd63ad5638b623f5a3 SHA1 8ad6e5de345e64a2aad372ae237fd59a7b43f47b SHA256 896541ac837421290934e2658ab364d4d3f0326259489a94a0cd166e2b05d735
+DIST irssi-0.8.14.tar.bz2 944708 RMD160 9c1cd4738432e7b3461ab371b9dcaafa0cd00827 SHA1 7718afec2de99a85b7eee0b945f8424d7b1bc947 SHA256 63ea70eb1ce6fb3c995e984f919dcd18882e916478779dd899de9385ef8fdf28
 EBUILD irssi-0.8.12.ebuild 1489 RMD160 3030634af02f2bb03a6ab8cd606afdfebf5a812d SHA1 ee1f45d1774a75e23be1aa188eccc9fd1e4edb80 SHA256 5175245a5219a5f5c597ded33514b673604ba7fce6364aab374b0e7f6bbd6e74
 EBUILD irssi-0.8.13-r1.ebuild 1315 RMD160 383d94e074ea05977a7f8e69775f41d9b6e461f4 SHA1 a38e55ead97b1e1dabf1997f7d57a4eae95779c5 SHA256 beadb0a646e77c9876f0fbef3323acf4264260c66814e71d183b08b9721223e3
 EBUILD irssi-0.8.13.ebuild 1282 RMD160 f2ce9ef1b1c10784522f272ab17309408dbde749 SHA1 677dd84035d6b312dc7f6b0c1c6dd7bbee5f9cbc SHA256 b28298f1367fde62908c7b7ce3e61058af5d999bcdb534d510e88bcdc439eee6
-MISC ChangeLog 19776 RMD160 e3177a6bb300354bfbc2bb68364c5dedfac12873 SHA1 66bd5c8b3d451ccb792a9e81d8ac0b71c77fbfb5 SHA256 74713ec44a684cb0a83a71afdaffc36a18ed1363d60661493de8ac972da9f35f
+EBUILD irssi-0.8.14.ebuild 1282 RMD160 079a2ff217f2a8cfd827f802281e91c705137030 SHA1 f2ceb308b3d505d3e78e891466763d756b807a21 SHA256 493f277f5f13b08a428762b901d5bc11bea3ee5213e58fffc9cea95f6dcdadaa
+MISC ChangeLog 19896 RMD160 7f2ee079376fe74e1b99cd5f723db26b214f3508 SHA1 2c7dec0bfbedc7d224bbf435d5e316bd5a9f3415 SHA256 01fda70b3a71f32cef52b805197df680fa46cca71d5f6ca4762288c99ea9d3fc
 MISC metadata.xml 270 RMD160 217b6381a937b94caa61f5d1dcbcdf24fe2852f1 SHA1 1e8951324990f813bd348ce2b1c4fc75cb097250 SHA256 4962741e0eded229c8ac0cca6dc8fed203d9b63ed7d8de546c661e6661579c75
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkpvYsEACgkQI1lqEGTUzyQGjACgqRmUM5QfZp63EG9tSuB6NpGd
+JL0An2HlNku9apDhhcvGNu7iGPkec3nJ
+=JhUx
+-----END PGP SIGNATURE-----
