@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/irssi/ChangeLog,v 1.145 2009/06/07 17:02:02 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/irssi/ChangeLog,v 1.146 2009/07/28 20:42:33 swegener Exp $
+
+*irssi-0.8.14 (28 Jul 2009)
+
+  28 Jul 2009; Sven Wegener <swegener@gentoo.org> +irssi-0.8.14.ebuild:
+  Version bump.
 
   07 Jun 2009; nixnut <nixnut@gentoo.org> irssi-0.8.13-r1.ebuild:
   ppc stable #271875
